2003-12-06  Mo DeJong  <mdejong@users.sourceforge.net>

	* db/dbutils.c (db_remove_file_def): Rework
	the function that removes all symbols for
	a given file name so that it uses the symbol
	highlight start position instead of the
	symbol start position. This is needed to match
	the implementation change in put_symbol made
	on 2003-07-22. With this change, symbols are
	correctly deleted from tables like cl and fu
	when the containing file is reparsed.

2003-11-30  Mo DeJong  <mdejong@users.sourceforge.net>

	* demo/Makefile.am: 2nd attempt at removing
	GNU tar dep. It seems Solaris tar does not
	like 2 sets of command line flags, so combine
	then into one set of options.
	* demo/Makefile.in: Regen.

2003-11-30  Mo DeJong  <mdejong@users.sourceforge.net>

	Remove dep on GNU tar for `make install`. [Bug 807708]

	* INSTALL.TXT: Remove note about GNU tar since
	it is no longer needed to run `make install`.
	* NEWS: Add items for upcoming b1 release.
	* demo/Makefile.am: Remove use of -X flag to
	tar since that meant we depended on GNU tar
	being on the PATH.
	* demo/Makefile.in: Regen.

2003-11-29  Mo DeJong  <mdejong@users.sourceforge.net>

	* INSTALL.TXT: Add note about the requirement
	of having GNU tar on the path before installing.

2003-11-29  Mo DeJong  <mdejong@users.sourceforge.net>

	Create a libdbckalloc.a in the db subdir and
	use it when linking the db functions in an
	executable that makes use of the Tcl runtime.
	This allows tracking of db mamory allocations
	and deallocations via the ckalloc/ckfree macros
	from Tcl.

	* INSTALL.TXT: Add note about --enable-symbols
	flag for debug builds.
	* db/Makefile.am: Build libdbckalloc.a from
	new dbckalloc.c file.
	* db/Makefile.in: Regen.
	* db/dbckalloc.c (db_malloc, db_free, db_realloc,
	db_calloc): Define set of db_malloc functions
	that make use of ckalloc/ckfree when the
	TCL_MEM_DEBUG symbol is defined.
	* hyper/Makefile.am: Link in libdbckalloc.a.
	* hyper/Makefile.in: Regen.